--- a/kirjandus.bib
+++ b/kirjandus.bib
@@ -172,4 +172,10 @@ author = {Suurna, Ranel, Sisas, Eveli},
 title = {GIS ja kartograafia alused},
 url = {https://www.digar.ee/arhiiv/nlib-digar:120392},
 year = {2010}}
-
+@article{Pilvik2019,
+author = {Pilvik, Maarja-Liisa, Muischnek, Kadri, Jaanimäe, Gerth, Lindström, Liina, Lust, Kersti, Orasmaa, Siim , Türna, Tõnis},
+journal = {Eesti Rakenduslingvistika Ühingu Aastaraamat, 15},
+pages = {139--158},
+title = {{Möistus sai kuulotedu: 19. sajandi vallakohtuprotokollide tekstidest digitaalse ressursi loomine}},
+year = {2019}
+}
